[refactor] Clean up custom license. Add NSP check and also include package-lock files. Fixes vulnerability.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
         "es6": true,
         "mocha": true
     },
+    "plugins": [
+      "security"
+    ],
     "extends": [
       "eslint:recommended"
     ],
